k8s/kkweon-raspberry/server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server
spec:
  ports:
    - name: grpc
      port: 9000
      protocol: TCP
      targetPort: grpc
    - name: http
      port: 9093
      protocol: TCP
      targetPort: http-metrics
  selector:
    app: server
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - image: kkweon/pr12er-server
          imagePullPolicy: Always
          name: server
          ports:
            - containerPort: 9000
              name: grpc
              protocol: TCP
            - containerPort: 9093
              name: http-metrics
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 10m
            limits:
              cpu: 1000m
              memory: 2Gi

          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "--addr=:9000"]
            initialDelaySeconds: 10

          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "--addr=:9000"]
            initialDelaySeconds: 20
            periodSeconds: 60
